<resources>



    <!--behavior-->
    <string name="bnv_behavior">com.kimiffy.cn.biubiu.utils.behavior.BottomNavigationViewBehavior</string>




    <!--全局-->
    <string name="app_name">BiuBiu</string>
    <string name="home_title">首页</string>
    <string name="system_title">体系</string>
    <string name="we_chat_title">公众号</string>
    <string name="project_title">项目</string>
    <string name="me_title">我</string>

    <string name="collect">收藏</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_fail">收藏失败</string>
    <string name="cancel_collect_success">取消收藏</string>
    <string name="cancel_collect_fail">取消收藏失败</string>
    <string name="share">分享</string>
    <string name="loading">加载中…</string>
    <string name="data_reload">重新加载</string>
    <string name="data_empty">暂无数据</string>
    <string name="search_hot">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="search_hint">发现更多干货</string>
    <string name="search_clean">清空</string>
    <string name="search_empty">暂无搜索记录</string>
    <!--首页-->



    <!--体系-->



    <!--公众号-->







</resources>
